[gd_scene load_steps=22 format=3 uid="uid://mom618kl3h80"]

[ext_resource type="Script" path="res://scripts/redslime.gd" id="1_5aty7"]
[ext_resource type="Texture2D" uid="uid://doyfkpuqoybnn" path="res://art/characters/slime.png" id="2_1xsax"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o710l"]
atlas = ExtResource("2_1xsax")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86sgx"]
atlas = ExtResource("2_1xsax")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p88o"]
atlas = ExtResource("2_1xsax")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1fle"]
atlas = ExtResource("2_1xsax")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xap2g"]
atlas = ExtResource("2_1xsax")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b35p6"]
atlas = ExtResource("2_1xsax")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f56l4"]
atlas = ExtResource("2_1xsax")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp5uk"]
atlas = ExtResource("2_1xsax")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xccue"]
atlas = ExtResource("2_1xsax")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imq5e"]
atlas = ExtResource("2_1xsax")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68tf0"]
atlas = ExtResource("2_1xsax")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ov75"]
atlas = ExtResource("2_1xsax")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f750h"]
atlas = ExtResource("2_1xsax")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_byvmk"]
atlas = ExtResource("2_1xsax")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udjme"]
atlas = ExtResource("2_1xsax")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_b5qe2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o710l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86sgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p88o")
}],
"loop": false,
"name": &"charge",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1fle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xap2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b35p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f56l4")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp5uk")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xccue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imq5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68tf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ov75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f750h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byvmk")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_udjme")
}],
"loop": false,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2qp6y"]
radius = 65.0077

[sub_resource type="CircleShape2D" id="CircleShape2D_nwlru"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h7bh2"]
radius = 4.0

[node name="redslime" type="CharacterBody2D" groups=["game_events"]]
modulate = Color(0.819608, 0.192157, 0.156863, 1)
script = ExtResource("1_5aty7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_b5qe2")
animation = &"walk"
offset = Vector2(0, -3.5)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_2qp6y")

[node name="redslime_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="redslime_hitbox"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_nwlru")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_h7bh2")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.6

[node name="death_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.74902, 0, 0, 1)
offset_left = -8.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 29.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="justhit" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="attack" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="attack_done" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="attack_cd" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="redslime_hitbox" to="." method="_on_redslime_hitbox_body_entered"]
[connection signal="body_exited" from="redslime_hitbox" to="." method="_on_redslime_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="justhit" to="." method="_on_justhit_timeout"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="attack_done" to="." method="_on_attack_done_timeout"]
[connection signal="timeout" from="attack_cd" to="." method="_on_attack_cd_timeout"]
